--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 4.1 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 5.3 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -859,21 +859,6 @@
         <span class="n">_stat</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">max</span><span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">stat_col</span><span class="p">],</span> <span class="n">floor_at_zero</span><span class="p">[</span><span class="s2">&quot;floor&quot;</span><span class="p">]),</span>
     <span class="p">)</span>
 
-    <span class="c1"># Filter data using slider stat</span>
-    <span class="k">assert</span> <span class="nb">list</span><span class="p">(</span><span class="n">sliders</span><span class="p">)[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">==</span> <span class="s2">&quot;_stat_site_max&quot;</span>  <span class="c1"># last for right operation order</span>
-    <span class="k">for</span> <span class="n">slider_stat</span><span class="p">,</span> <span class="n">slider</span> <span class="ow">in</span> <span class="n">sliders</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-        <span class="k">if</span> <span class="n">slider_stat</span> <span class="o">==</span> <span class="s2">&quot;_stat_site_max&quot;</span><span class="p">:</span>
-            <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_joinaggregate</span><span class="p">(</span>
-                <span class="n">_stat_site_max</span><span class="o">=</span><span class="s2">&quot;max(_stat)&quot;</span><span class="p">,</span>
-                <span class="n">groupby</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">],</span>
-            <span class="p">)</span>
-        <span class="k">if</span> <span class="n">slider_stat</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">addtl_slider_stats_hide_not_filter</span><span class="p">:</span>
-            <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_filter</span><span class="p">(</span>
-                <span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span> <span class="o">&gt;=</span> <span class="p">(</span><span class="n">slider</span><span class="p">[</span><span class="s2">&quot;cutoff&quot;</span><span class="p">]</span> <span class="o">-</span> <span class="mf">1e-6</span><span class="p">))</span>  <span class="c1"># rounding tol</span>
-                <span class="o">|</span> <span class="o">~</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">isFinite</span><span class="p">(</span>
-                    <span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span>
-                <span class="p">)</span>  <span class="c1"># do not filter null values</span>
-            <span class="p">)</span>
     <span class="c1"># get stats to hide, not filter</span>
     <span class="k">if</span> <span class="n">addtl_slider_stats_hide_not_filter</span><span class="p">:</span>
         <span class="c1"># https://stackoverflow.com/a/61502057/4191652</span>
@@ -887,6 +872,27 @@
         <span class="p">)</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_calculate</span><span class="p">(</span><span class="n">_stat_hide</span><span class="o">=</span><span class="s2">&quot;false&quot;</span><span class="p">)</span>
+    <span class="c1"># Filter data using slider stat</span>
+    <span class="k">assert</span> <span class="nb">list</span><span class="p">(</span><span class="n">sliders</span><span class="p">)[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">==</span> <span class="s2">&quot;_stat_site_max&quot;</span>  <span class="c1"># last for right operation order</span>
+    <span class="k">for</span> <span class="n">slider_stat</span><span class="p">,</span> <span class="n">slider</span> <span class="ow">in</span> <span class="n">sliders</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+        <span class="k">if</span> <span class="n">slider_stat</span> <span class="o">==</span> <span class="s2">&quot;_stat_site_max&quot;</span><span class="p">:</span>
+            <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_calculate</span><span class="p">(</span>
+                <span class="n">_stat_not_hidden</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">if_</span><span class="p">(</span>
+                    <span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="s2">&quot;_stat_hide&quot;</span><span class="p">],</span>
+                    <span class="n">data_df</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span><span class="o">.</span><span class="n">min</span><span class="p">(),</span>
+                    <span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="s2">&quot;_stat&quot;</span><span class="p">],</span>
+                <span class="p">),</span>
+            <span class="p">)</span><span class="o">.</span><span class="n">transform_joinaggregate</span><span class="p">(</span>
+                <span class="n">_stat_site_max</span><span class="o">=</span><span class="s2">&quot;max(_stat_not_hidden)&quot;</span><span class="p">,</span>
+                <span class="n">groupby</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">],</span>
+            <span class="p">)</span>
+        <span class="k">if</span> <span class="n">slider_stat</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">addtl_slider_stats_hide_not_filter</span><span class="p">:</span>
+            <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_filter</span><span class="p">(</span>
+                <span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span> <span class="o">&gt;=</span> <span class="p">(</span><span class="n">slider</span><span class="p">[</span><span class="s2">&quot;cutoff&quot;</span><span class="p">]</span> <span class="o">-</span> <span class="mf">1e-6</span><span class="p">))</span>  <span class="c1"># rounding tol</span>
+                <span class="o">|</span> <span class="o">~</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">isFinite</span><span class="p">(</span>
+                    <span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span>
+                <span class="p">)</span>  <span class="c1"># do not filter null values</span>
+            <span class="p">)</span>
     <span class="c1"># Remove any sites that are only wildtype and filter with site zoom brush</span>
     <span class="n">base_chart</span> <span class="o">=</span> <span class="p">(</span>
         <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_calculate</span><span class="p">(</span>
