--- a/_modules/polyclonal/polyclonal_collection.html
+++ b/_modules/polyclonal/polyclonal_collection.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.polyclonal_collection &#8212; polyclonal 4.0 documentation</title>
+    <title>polyclonal.polyclonal_collection &#8212; polyclonal 5.3 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -54,6 +54,8 @@
 <span class="kn">import</span> <span class="nn">multiprocessing</span>
 <span class="kn">from</span> <span class="nn">functools</span> <span class="kn">import</span> <span class="n">partial</span>
 <span class="kn">from</span> <span class="nn">itertools</span> <span class="kn">import</span> <span class="n">repeat</span>
+
+<span class="kn">import</span> <span class="nn">numpy</span>
 
 <span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 
@@ -591,6 +593,10 @@
         <span class="n">aggs</span> <span class="o">=</span> <span class="p">{</span>
             <span class="s2">&quot;escape_mean&quot;</span><span class="p">:</span> <span class="n">pd</span><span class="o">.</span><span class="n">NamedAgg</span><span class="p">(</span><span class="s2">&quot;escape&quot;</span><span class="p">,</span> <span class="s2">&quot;mean&quot;</span><span class="p">),</span>
             <span class="s2">&quot;escape_median&quot;</span><span class="p">:</span> <span class="n">pd</span><span class="o">.</span><span class="n">NamedAgg</span><span class="p">(</span><span class="s2">&quot;escape&quot;</span><span class="p">,</span> <span class="s2">&quot;median&quot;</span><span class="p">),</span>
+            <span class="s2">&quot;escape_min_magnitude&quot;</span><span class="p">:</span> <span class="n">pd</span><span class="o">.</span><span class="n">NamedAgg</span><span class="p">(</span>
+                <span class="s2">&quot;escape&quot;</span><span class="p">,</span>
+                <span class="k">lambda</span> <span class="n">s</span><span class="p">:</span> <span class="n">s</span><span class="o">.</span><span class="n">tolist</span><span class="p">()[</span><span class="n">numpy</span><span class="o">.</span><span class="n">argmin</span><span class="p">(</span><span class="n">s</span><span class="o">.</span><span class="n">abs</span><span class="p">())],</span>
+            <span class="p">),</span>
             <span class="s2">&quot;escape_std&quot;</span><span class="p">:</span> <span class="n">pd</span><span class="o">.</span><span class="n">NamedAgg</span><span class="p">(</span><span class="s2">&quot;escape&quot;</span><span class="p">,</span> <span class="s2">&quot;std&quot;</span><span class="p">),</span>
             <span class="s2">&quot;n_models&quot;</span><span class="p">:</span> <span class="n">pd</span><span class="o">.</span><span class="n">NamedAgg</span><span class="p">(</span><span class="s2">&quot;escape&quot;</span><span class="p">,</span> <span class="s2">&quot;count&quot;</span><span class="p">),</span>
         <span class="p">}</span>
@@ -764,7 +770,7 @@
 <span class="sd">        biochem_order_aas : bool</span>
 <span class="sd">            Biochemically order amino-acid alphabet :attr:`PolyclonalCollection.alphabet`</span>
 <span class="sd">            by passing it through :func:`polyclonal.alphabets.biochem_order_aas`.</span>
-<span class="sd">        avg_type : {&quot;mean&quot;, &quot;median&quot;, None}</span>
+<span class="sd">        avg_type : {&quot;mean&quot;, &quot;median&quot;, &quot;min_magnitude&quot;, None}</span>
 <span class="sd">            Type of average to plot, None defaults to</span>
 <span class="sd">            :attr:`PolyclonalCollection.default_avg_to_plot`.</span>
 <span class="sd">        init_n_models : None or int</span>
