--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -5,13 +5,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 5.3 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 6.0 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
+    <script src="../../_static/jquery.js"></script>
+    <script src="../../_static/underscore.js"></script>
     <script src="../../_static/doctools.js"></script>
-    <script src="../../_static/sphinx_highlight.js"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
@@ -73,10 +74,10 @@
 
 
 <div class="viewcode-block" id="color_gradient_hex"><a class="viewcode-back" href="../../polyclonal.plot.html#polyclonal.plot.color_gradient_hex">[docs]</a><span class="k">def</span> <span class="nf">color_gradient_hex</span><span class="p">(</span><span class="n">start</span><span class="p">,</span> <span class="n">end</span><span class="p">,</span> <span class="n">n</span><span class="p">):</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;Get a list of colors linearly spanning a range.</span>
+    <span class="sd">&quot;&quot;&quot;Get a list of colors linearly spanning a range.</span>
 
 <span class="sd">    Parameters</span>
-<span class="sd">    -----------</span>
+<span class="sd">    ----------</span>
 <span class="sd">    start : str</span>
 <span class="sd">        Starting color.</span>
 <span class="sd">    end : str</span>
@@ -111,7 +112,7 @@
     <span class="n">width</span><span class="o">=</span><span class="mi">110</span><span class="p">,</span>
     <span class="n">height_per_bar</span><span class="o">=</span><span class="mi">25</span><span class="p">,</span>
 <span class="p">):</span>
-<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;Bar plot of activity against each epitope, :math:`a_{\rm{wt},e}`.</span>
+    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;Bar plot of activity against each epitope, :math:`a_{\rm{wt},e}`.</span>
 
 <span class="sd">    Parameters</span>
 <span class="sd">    ----------</span>
@@ -203,7 +204,7 @@
     <span class="n">replicate_col</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">weighted_replicates</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
 <span class="p">):</span>
-<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;Plot Hill curves.</span>
+    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;Plot Hill curves.</span>
 
 <span class="sd">    The curves are defined by</span>
 <span class="sd">    :math:`U_e = \frac{1 - t_e}{1 + \left[c \exp \left(a_e\right)\right]^{n_e}} + t_e`</span>
@@ -213,14 +214,14 @@
 <span class="sd">    plot is made for each curve name (eg, epitope :math:`e`).</span>
 
 <span class="sd">    Parameters</span>
-<span class="sd">    -----------</span>
+<span class="sd">    ----------</span>
 <span class="sd">    curve_specs_df : pandas.DataFrame</span>
 <span class="sd">        Should have columns `name_col` (giving name, eg epitope), &#39;activity&#39;,</span>
 <span class="sd">        &#39;hill_coefficient&#39;, and &#39;non_neutralized_frac&#39; specifying each curves.</span>
 <span class="sd">        curve.</span>
 <span class="sd">    name_col : pandas.DataFrame</span>
 <span class="sd">        Name of column in `curve_specs_df` giving the curve name (eg, epitope)</span>
-<span class="sd">    names_to_color : dict or None</span>
+<span class="sd">    names_to_colors : dict or None</span>
 <span class="sd">        To specify colors for each entry in `name_col` (eg, epitope), provide</span>
 <span class="sd">        dict mapping names to colors.</span>
 <span class="sd">    unbound_label : str</span>
@@ -247,7 +248,7 @@
 <span class="sd">        heavily weighted line. `None` means all are heavily weighted.</span>
 
 <span class="sd">    Returns</span>
-<span class="sd">    --------</span>
+<span class="sd">    -------</span>
 <span class="sd">    altair.Chart</span>
 <span class="sd">        Interactive plot.</span>
 
@@ -265,12 +266,12 @@
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">name_col</span><span class="si">=}</span><span class="s2"> not unique in </span><span class="si">{</span><span class="n">curve_specs_df</span><span class="si">=}</span><span class="s2">&quot;</span><span class="p">)</span>
 
     <span class="c1"># get concentrations to plot</span>
-    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">concentration_range</span><span class="p">,</span> <span class="p">(</span><span class="nb">float</span><span class="p">,</span> <span class="nb">int</span><span class="p">)):</span>
+    <span class="k">if</span> <span class="nb">hasattr</span><span class="p">(</span><span class="n">concentration_range</span><span class="p">,</span> <span class="s2">&quot;__len__&quot;</span><span class="p">):</span>
+        <span class="n">min_c</span><span class="p">,</span> <span class="n">max_c</span> <span class="o">=</span> <span class="n">concentration_range</span>
+    <span class="k">else</span><span class="p">:</span>
         <span class="n">exp_neg_a</span> <span class="o">=</span> <span class="n">numpy</span><span class="o">.</span><span class="n">exp</span><span class="p">(</span><span class="o">-</span><span class="n">curve_specs_df</span><span class="p">[</span><span class="s2">&quot;activity&quot;</span><span class="p">])</span>
         <span class="n">min_c</span> <span class="o">=</span> <span class="n">exp_neg_a</span><span class="o">.</span><span class="n">min</span><span class="p">()</span> <span class="o">/</span> <span class="n">concentration_range</span>
         <span class="n">max_c</span> <span class="o">=</span> <span class="n">exp_neg_a</span><span class="o">.</span><span class="n">max</span><span class="p">()</span> <span class="o">*</span> <span class="n">concentration_range</span>
-    <span class="k">else</span><span class="p">:</span>
-        <span class="n">min_c</span><span class="p">,</span> <span class="n">max_c</span> <span class="o">=</span> <span class="n">concentration_range</span>
     <span class="k">if</span> <span class="n">min_c</span> <span class="o">&gt;=</span> <span class="n">max_c</span><span class="p">:</span>
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;invalid concentration range of </span><span class="si">{</span><span class="n">min_c</span><span class="si">}</span><span class="s2"> to </span><span class="si">{</span><span class="n">max_c</span><span class="si">=}</span><span class="s2">&quot;</span><span class="p">)</span>
     <span class="n">cs</span> <span class="o">=</span> <span class="n">numpy</span><span class="o">.</span><span class="n">logspace</span><span class="p">(</span><span class="n">math</span><span class="o">.</span><span class="n">log10</span><span class="p">(</span><span class="n">min_c</span><span class="p">),</span> <span class="n">math</span><span class="o">.</span><span class="n">log10</span><span class="p">(</span><span class="n">max_c</span><span class="p">),</span> <span class="n">npoints</span><span class="p">,</span> <span class="n">base</span><span class="o">=</span><span class="mi">10</span><span class="p">)</span>
@@ -290,7 +291,7 @@
         <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">addtl_tooltip_cols</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">c</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">curve_specs_df</span><span class="o">.</span><span class="n">columns</span><span class="p">:</span>
                 <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
-                    <span class="sa">f</span><span class="s2">&quot;`addtl_tooltip_stats` column </span><span class="si">{</span><span class="n">c</span><span class="si">}</span><span class="s2"> not in `curve_specs_df`&quot;</span>
+                    <span class="sa">f</span><span class="s2">&quot;`addtl_tooltip_cols` column </span><span class="si">{</span><span class="n">c</span><span class="si">}</span><span class="s2"> not in `curve_specs_df`&quot;</span>
                 <span class="p">)</span>
             <span class="k">if</span> <span class="n">curve_specs_df</span><span class="p">[</span><span class="n">c</span><span class="p">]</span><span class="o">.</span><span class="n">dtype</span> <span class="o">==</span> <span class="nb">float</span><span class="p">:</span>
                 <span class="n">addtl_tooltips</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">Tooltip</span><span class="p">(</span><span class="n">c</span><span class="p">,</span> <span class="nb">format</span><span class="o">=</span><span class="s2">&quot;.3g&quot;</span><span class="p">))</span>
@@ -378,7 +379,7 @@
     <span class="n">diverging_colors</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">scheme</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
 <span class="p">):</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;Plot a correlation matrix as heat map from a tidy data frame of correlations.</span>
+    <span class="sd">&quot;&quot;&quot;Plot a correlation matrix as heat map from a tidy data frame of correlations.</span>
 
 <span class="sd">    Parameters</span>
 <span class="sd">    ----------</span>
@@ -517,7 +518,7 @@
     <span class="n">rename_stat_col</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">sites_to_show</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
 <span class="p">):</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;Lineplots and heatmaps of per-site and per-mutation values.</span>
+    <span class="sd">&quot;&quot;&quot;Lineplots and heatmaps of per-site and per-mutation values.</span>
 
 <span class="sd">    Parameters</span>
 <span class="sd">    ----------</span>
@@ -1211,7 +1212,7 @@
     </form>
     </div>
 </div>
-<script>document.getElementById('searchbox').style.display = "block"</script>
+<script>$('#searchbox').show(0);</script>
 
 
 
@@ -1228,8 +1229,8 @@
       &copy;2019--2023.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 6.1.3</a>
-      &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 4.2.0</a>
+      &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.12</a>
       
     </div>
 
