--- a/genindex.html
+++ b/genindex.html
@@ -5,13 +5,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; polyclonal 5.3 documentation</title>
+    <title>Index &#8212; polyclonal 6.0 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="_static/plot_directive.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
+    <script src="_static/jquery.js"></script>
+    <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
-    <script src="_static/sphinx_highlight.js"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
@@ -270,8 +271,6 @@
       </ul></li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_corr_heatmap">mut_escape_corr_heatmap() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_df">mut_escape_df (polyclonal.polyclonal.Polyclonal property)</a>
 
       <ul>
@@ -280,6 +279,8 @@
       </ul></li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_df_replicates">mut_escape_df_replicates (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_df_w_model_values">mut_escape_df_w_model_values (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_pdb_b_factor">mut_escape_pdb_b_factor() (polyclonal.polyclonal.Polyclonal method)</a>
@@ -298,6 +299,22 @@
       </ul></li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_site_summary_df_replicates">mut_escape_site_summary_df_replicates() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_icXX_df">mut_icXX_df() (polyclonal.polyclonal.Polyclonal method)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_icXX_df">(polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
+</li>
+      </ul></li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_icXX_df_replicates">mut_icXX_df_replicates() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
+</li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_icXX_df_w_model_values">mut_icXX_df_w_model_values() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
+</li>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_icXX_plot">mut_icXX_plot() (polyclonal.polyclonal.Polyclonal method)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_icXX_plot">(polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
+</li>
+      </ul></li>
       <li><a href="polyclonal.utils.html#polyclonal.utils.MutationParser">MutationParser (class in polyclonal.utils)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mutations">mutations (polyclonal.polyclonal.Polyclonal attribute)</a>
@@ -546,7 +563,7 @@
     </form>
     </div>
 </div>
-<script>document.getElementById('searchbox').style.display = "block"</script>
+<script>$('#searchbox').show(0);</script>
 
 
 
@@ -563,8 +580,8 @@
       &copy;2019--2023.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 6.1.3</a>
-      &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 4.2.0</a>
+      &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.12</a>
       
     </div>
 
